# next-tokyo-assets

./: .firebaserc  README.md  firebase.json  products.json  workflow1.yaml
.github/workflows/: deploy.yaml  firebase-hosting-merge.yml  firebase-hosting-pull-request.yml  flutter-deploy.yaml
2024/bq/: README.md  customer_voice.csv  order.csv  store.csv  tutorial.md
2024/catalog/: schema.json  tutorial.md  workflow.yaml
2024/genai-app-patterns/: tutorial_ja.md
2024/pfe/: tutorial.md
2025/adk-agentengine-basic/: .env  .gitignore  README.md  pyproject.toml  query.py
2025/adk-agentengine-basic/ae_deploy/: content_fetcher_agent.yaml  deploy.py  root_agent.yaml  script_generator_agent.yaml
2025/adk-agentengine-basic/ae_deploy/tmp/ae_deploy/: podcast_workflow.yaml
2025/adk-agentengine-basic/ae_deploy/tools/: fetcher.py
2025/adk-agentengine-basic/complete/: gcp_releasenotes_agent.yaml  podcast_workflow.yaml  root_agent.yaml
2025/adk-agentengine-basic/complete/tmp/complete/: audio_generator_agent.yaml  content_fetcher_agent.yaml
2025/adk-agentengine-basic/complete/tools/: vocalizer.py
2025/adk-agentengine-basic/step01/: agent.py
2025/adk-agentengine-basic/step02/: agent.py  answer.py  evaluation.test.json
2025/adk-agentengine-basic/step03/: agent.py
2025/adk-agentengine-basic/step04/: agent.py  requirements.txt
2025/adk-agentengine-basic/step05/: agent.py  tools.py
2025/generative-ai-agent-dev-deploy-handson/: .gitignore  (+2 more)
article/: zenn_article.md
catalog-enrichment-job/: Dockerfile
scripts/: setup_eventarc_subscription.sh
tf/: firebase.tf
(+201 files in other folders)
