[project]
name = "adk-agentengine-basic"
version = "0.2.0"
description = "Hands-on asset for Agent Development Kit and Agent Engine basic level"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-adk[eval]>=1.8.0",
    "trafilatura>=1.6.1",
]

[dependency-groups]
dev = [
    "isort>=6.0.1",
]
